--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -9,23 +9,23 @@
   <link rel="icon" type="image/png" href="./favicon.png">
 </head>
 <body>
-<!--Header-->
+<!-- Header -->
 <header>
   <div>
     <span>Techium</span>
     <nav></nav>
   </div>
 </header>
-<!--Main-->
+<!-- Main -->
 <main>
   <h1>Homepage</h1>
-  <!--Hero section-->
+  <!-- Hero section -->
   <section>
     <div>
       <h2>We help you build your brand!</h2>
     </div>
   </section>
-  <!--Services section-->
+  <!-- Services section -->
   <section>
     <div>
       <header>
@@ -42,7 +42,7 @@
       </div>
     </div>
   </section>
-  <!--Works section-->
+  <!-- Works section -->
   <section>
     <div>
       <header>
@@ -63,7 +63,7 @@
     </div>
   </section>
   <br>
-  <!--About Us section-->
+  <!-- About Us section -->
   <section>
     <div>
       <header>
@@ -80,7 +80,7 @@
       </div>
     </div>
   </section>
-  <!--Lastest news section-->
+  <!-- Latest news section -->
   <section>
     <div>
       <header>
@@ -105,7 +105,7 @@
       </div>
     </div>
   </section>
-  <!--Testimonials section-->
+  <!-- Testimonials section -->
   <section>
     <div>
       <header>
@@ -119,7 +119,7 @@
       </div>
     </div>
   </section>
-  <!--Contact section-->
+  <!-- Contact section -->
   <section>
     <div>
       <header>
