--- a/0x00-html_advanced/20-index.html
+++ b/0x00-html_advanced/20-index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" href="./favicon.png">
 </head>
 <body>
-<br><!--Header-->
+<!-- Header -->
 <header>
   <div>
     <div><a href="/"><span>Techium</span></a></div>
@@ -24,16 +24,16 @@
     </nav>
   </div>
 </header>
-<br><!--Main-->
+<!-- Main -->
 <main>
   <h1>Homepage</h1>
-  <br><!--Hero section-->
+  <!-- Hero section -->
   <section>
     <div>
       <h2>We help you build your brand!</h2>
     </div>
   </section>
-  <br><!--Services section-->
+  <!-- Services section -->
   <section>
     <div>
       <header>
@@ -50,7 +50,7 @@
       </div>
     </div>
   </section>
-  <br><!--Works section-->
+  <!-- Works section -->
   <section>
     <div>
       <header>
@@ -70,7 +70,7 @@
       </div>
     </div>
   </section>
-  <br><!--About Us section-->
+  <!-- About Us section -->
   <section>
     <div>
       <header>
@@ -87,7 +87,7 @@
       </div>
     </div>
   </section>
-  <br><!--Lastest news section-->
+  <!-- Lastest news section -->
   <section>
     <div>
       <header>
@@ -112,7 +112,7 @@
       </div>
     </div>
   </section>
-  <br><!--Testimonials section-->
+  <!-- Testimonials section -->
   <section>
     <div>
       <header>
@@ -126,7 +126,7 @@
       </div>
     </div>
   </section>
-  <br><!--Contact section-->
+  <!-- Contact section -->
   <section>
     <div>
       <header>
@@ -139,6 +139,7 @@
     </div>
   </section>
 </main>
+<!-- Footer -->
 <footer>
   <div>
     Footer
