--- a/0x00-html_advanced/23-index.html
+++ b/0x00-html_advanced/23-index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" href="./favicon.png">
 </head>
 <body>
-<br><!--Header-->
+<!-- Header -->
 <header>
   <div>
     <div><a href="/"><span>Techium</span></a></div>
@@ -24,17 +24,17 @@
     </nav>
   </div>
 </header>
-<br><!--Main-->
+<!-- Main -->
 <main>
   <h1>Homepage</h1>
-  <br><!--Hero section-->
+  <!-- Hero section -->
   <section>
     <div>
       <h2>We help you build your brand!</h2>
       <a href="#">Get started</a>
     </div>
   </section>
-  <br><!--Services section-->
+  <!-- Services section -->
   <section>
     <div>
       <header>
@@ -51,7 +51,7 @@
       </div>
     </div>
   </section>
-  <br><!--Works section-->
+  <!-- Works section -->
   <section>
     <div>
       <header>
@@ -71,7 +71,7 @@
       </div>
     </div>
   </section>
-  <br><!--About Us section-->
+  <!-- About Us section -->
   <section>
     <div>
       <header>
@@ -89,7 +89,7 @@
       <a href="./about.html">Learn more about us</a>
     </div>
   </section>
-  <br><!--Lastest news section-->
+  <!-- Latest news section -->
   <section>
     <div>
       <header>
@@ -114,7 +114,7 @@
       </div>
     </div>
   </section>
-  <br><!--Testimonials section-->
+  <!-- Testimonials section -->
   <section>
     <div>
       <header>
@@ -128,7 +128,7 @@
       </div>
     </div>
   </section>
-  <br><!--Contact section-->
+  <!-- Contact section -->
   <section>
     <div>
       <header>
