--- a/0x00-html_advanced/25-index.html
+++ b/0x00-html_advanced/25-index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" href="./favicon.png">
 </head>
 <body>
-<br><!--Header-->
+<!-- Header -->
 <header>
   <div>
     <div><a href="/"><span>Techium</span></a></div>
@@ -26,17 +26,17 @@
     </nav>
   </div>
 </header>
-<br><!--Main-->
+<!-- Main -->
 <main>
   <h1>Homepage</h1>
-  <br><!--Hero section-->
+  <!-- Hero section -->
   <section>
     <div>
       <h2>We help you build your brand!</h2>
       <a href="#">Get started</a>
     </div>
   </section>
-  <br><!--Services section-->
+  <!-- Services section -->
   <section>
     <div>
       <header>
@@ -53,7 +53,7 @@
       </div>
     </div>
   </section>
-  <br><!--Works section-->
+  <!-- Works section -->
   <section>
     <div>
       <header>
@@ -73,7 +73,7 @@
       </div>
     </div>
   </section>
-  <br><!--About Us section-->
+  <!-- About Us section -->
   <section>
     <div>
       <header>
@@ -91,7 +91,7 @@
       <a href="./about.html">Learn more about us</a>
     </div>
   </section>
-  <br><!--Lastest news section-->
+  <!-- Latest news section -->
   <section>
     <div>
       <header>
@@ -116,7 +116,7 @@
       </div>
     </div>
   </section>
-  <br><!--Testimonials section-->
+  <!-- Testimonials section -->
   <section>
     <div>
       <header>
@@ -130,7 +130,7 @@
       </div>
     </div>
   </section>
-  <br><!--Contact section-->
+  <!-- Contact section -->
   <section>
     <div>
       <header>
