--- a/0x00-html_advanced/latest_news.html
+++ b/0x00-html_advanced/latest_news.html
@@ -9,23 +9,23 @@
   <link rel="icon" type="image/png" href="./favicon.png">
 </head>
 <body>
-<br><!--Header-->
+<!-- Header -->
 <header>
   <div>
     <div><a href="/"><span>Techium</span></a></div>
     <nav></nav>
   </div>
 </header>
-<br><!--Main-->
+<!-- Main -->
 <main>
   <h1>Homepage</h1>
-  <br><!--Hero section-->
+  <!-- Hero section -->
   <section>
     <div>
       <h2>We help you build your brand!</h2>
     </div>
   </section>
-  <br><!--Services section-->
+  <!-- Services section -->
   <section>
     <div>
       <header>
@@ -42,7 +42,7 @@
       </div>
     </div>
   </section>
-  <br><!--Works section-->
+  <!-- Works section -->
   <section>
     <div>
       <header>
@@ -62,7 +62,7 @@
       </div>
     </div>
   </section>
-  <br><!--About Us section-->
+  <!-- About Us section -->
   <section>
     <div>
       <header>
@@ -79,7 +79,7 @@
       </div>
     </div>
   </section>
-  <br><!--Lastest news section-->
+  <!-- Latest news section -->
   <section>
     <div>
       <header>
@@ -104,7 +104,7 @@
       </div>
     </div>
   </section>
-  <br><!--Testimonials section-->
+  <!-- Testimonials section -->
   <section>
     <div>
       <header>
@@ -118,7 +118,7 @@
       </div>
     </div>
   </section>
-  <br><!--Contact section-->
+  <!-- Contact section -->
   <section>
     <div>
       <header>
