--- a/0x00-html_advanced/25-index.html
+++ b/0x00-html_advanced/25-index.html
@@ -154,9 +154,9 @@
   </div>
   <div>
     <ul>
-      <a href="#Terms of Use">Terms of Use</a>
-      <a href="#Privacy Policy">Privacy Policy</a>
-      <a href="#Cookie Policy">Cookie Policy</a>
+      <li><a href="#Terms of Use">Terms of Use</a></li>
+      <li><a href="#Privacy Policy">Privacy Policy</a></li>
+      <li><a href="#Cookie Policy">Cookie Policy</a></li>
     </ul>
   </div>
 </footer>
