--- a/0x00-html_advanced/31-index.html
+++ b/0x00-html_advanced/31-index.html
@@ -149,7 +149,7 @@
 </main>
 <footer>
   <address>
-    234 Washington Street<br>
+    234 Washington Street
     Urbana, Illinois
   </address>
   <div>
