Trying to fix the table in 33, added spaces in styleguide

--- a/0x00-html_advanced/33-styleguide.html
+++ b/0x00-html_advanced/33-styleguide.html
@@ -117,7 +117,7 @@ honcus faucibus.</p>
     <header>
       <h2>Table</h2>
     </header>
-    <table style="border-top: 1px solid;">
+    <table>
       <tr>
         <td colspan="3" style="text-align: center;">Star Wars Trilogy Data</td>
       </tr>
