Added <caption> and missing scope="row" on IV

--- a/0x00-html_advanced/33-styleguide.html
+++ b/0x00-html_advanced/33-styleguide.html
@@ -117,17 +117,15 @@ honcus faucibus.</p>
     <header>
       <h2>Table</h2>
     </header>
-    <table>
-      <tr>
-        <td colspan="3" style="text-align: center;">Star Wars Trilogy Data</td>
-      </tr>
+    <table style="border-top: 1px solid;">
+      <caption>Star Wars Trilogy</caption>
       <tr>
         <th scope="col">Title</th>
         <th scope="col">Director</th>
         <th scope="col">Release Date</th>
       </tr>
       <tr>
-        <th >Star Wars: Episode IV - A New Hope</th>
+        <th scope="row">Star Wars: Episode IV - A New Hope</th>
         <td>George Lucas</td>
         <td>May 25th, 1977</td>
       </tr>
