--- a/0x00-html_advanced/33-styleguide.html
+++ b/0x00-html_advanced/33-styleguide.html
@@ -117,7 +117,7 @@ honcus faucibus.</p>
     <header>
       <h2>Table</h2>
     </header>
-    <table style="border-top: 1px solid;">
+    <table>
       <caption>Star Wars Trilogy</caption>
       <tr>
         <th scope="col">Title</th>
