--- a/0x00-html_advanced/36-index.html
+++ b/0x00-html_advanced/36-index.html
@@ -148,20 +148,20 @@
       <div>
         <article>
           <img src="images/pic-person-01.jpg" alt="Yuri Y. avatar" height="100" width="100">
-          <blockquote cite="Yuri Y.">
-            I am completely blown away. Thanks to Techium, we've just launched our 5th website!
+          <blockquote>
+            <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!<cite>Yuri Y.</cite></p>
           </blockquote>
         </article>
         <article>
           <img src="images/pic-person-02.jpg" alt="Dorrie S. avatar" height="100" width="100">
-          <blockquote cite="Dorrie S.">
-            Thank you so much for your help. Techium company is awesome!
+          <blockquote>
+            <p>Thank you so much for your help. Techium company is awesome!<cite>Dorrie S.</cite></p>
           </blockquote>
         </article>
         <article>
           <img src="images/pic-person-03.jpg" alt="Sven H. avatar" height="100" width="100">
-          <blockquote cite="Sven H.">
-            I love your system. Definitely worth the investment. I'd be lost without Techium company.
+          <blockquote>
+            <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.<cite>Sven H.</cite></p>
           </blockquote>
         </article>
       </div>
