Added missing word to caption

--- a/0x00-html_advanced/33-styleguide.html
+++ b/0x00-html_advanced/33-styleguide.html
@@ -118,7 +118,7 @@ honcus faucibus.</p>
       <h2>Table</h2>
     </header>
     <table>
-      <caption>Star Wars Trilogy</caption>
+      <caption>Star Wars Trilogy Data</caption>
       <thead>
         <tr>
           <th scope="col">Title</th>
