--- a/0x00-html_advanced/36-index.html
+++ b/0x00-html_advanced/36-index.html
@@ -134,19 +134,19 @@
         <article>
           <img src="images/pic-person-01.jpg" alt="Yuri Y. avatar" height="100" width="100">
           <blockquote>
-            <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!<cite>Yuri Y.</cite></p>
+            <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</p><cite>Yuri Y.</cite>
           </blockquote>
         </article>
         <article>
           <img src="images/pic-person-02.jpg" alt="Dorrie S. avatar" height="100" width="100">
           <blockquote>
-            <p>Thank you so much for your help. Techium company is awesome!<cite>Dorrie S.</cite></p>
+            <p>Thank you so much for your help. Techium company is awesome!</p><cite>Dorrie S.</cite>
           </blockquote>
         </article>
         <article>
           <img src="images/pic-person-03.jpg" alt="Sven H. avatar" height="100" width="100">
           <blockquote>
-            <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.<cite>Sven H.</cite></p>
+            <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.</p><cite>Sven H.</cite>
           </blockquote>
         </article>
       </div>
