--- a/0x00-html_advanced/36-index.html
+++ b/0x00-html_advanced/36-index.html
@@ -31,139 +31,154 @@
   <h1>Homepage</h1>
   <!-- Hero section -->
   <section>
-    <div>
-      <h2>We help you build your brand!</h2>
-      <a href="#">Get started</a>
-    </div>
+      <div>
+          <h2>We help you build your brand!</h2>
+          <a href="#">Get started</a>
+      </div>
   </section>
   <!-- Services section -->
   <section>
-    <div>
-      <header>
-        <h2>Services</h2>
-        <p>We work with you</p>
-      </header>
       <div>
-        <h3><a href="#">Design & Concept</a></h3>
-        <h3><a href="#">Digital Strategy</a></h3>
-        <h3><a href="#">Content Strategy</a></h3>
-        <h3><a href="#">UX Design</a></h3>
-        <h3><a href="#">Web Development</a></h3>
-        <h3><a href="#">Social Media</a></h3>
+          <header>
+              <h2>Services</h2>
+              <p>We work with you</p>
+          </header>
+          <div>
+              <h3><a href="#">Design & Concept</a></h3>
+              <h3><a href="#">Digital Strategy</a></h3>
+              <h3><a href="#">Content Strategy</a></h3>
+              <h3><a href="#"><a href="#">UX Design</a></a></h3>
+              <h3><a href="#">Web Development</a></h3>
+              <h3><a href="#">Social Media</a></h3>
+          </div>
       </div>
-    </div>
   </section>
   <!-- Works section -->
   <section>
-    <div>
-      <header>
-        <h2>Works</h2>
-        <p>Take a look in our portfolio</p>
-      </header>
       <div>
-        <article>
-          <div><img src="./images/pic-work-01.jpg" alt=""></div>
-          <h3><a href="#">Interior Design</a></h3>
-        </article>
-        <article>
-          <div><img src="./images/pic-work-02.jpg" alt=""></div>
-          <h3><a href="#">Web Development</a></h3>
-        </article>
-        <article>
-          <div><img src="./images/pic-work-03.jpg" alt=""></div>
-          <h3><a href="#">Personal Brand</a></h3>
-        </article>
+          <header>
+              <h2>Works</h2>
+              <p>Take a look in our portfolio</p>
+          </header>
+          <div>
+              <article>
+                  <div><img src="./images/pic-work-01.jpg" alt=""></div>
+                  <h3><a href="#">Interior Design</a></h3>
+              </article>
+              <article>
+                  <div><img src="./images/pic-work-02.jpg" alt=""></div>
+                  <h3><a href="#">Web Development</a></h3>
+              </article>
+              <article>
+                  <div><img src="./images/pic-work-03.jpg" alt=""></div>
+                  <h3><a href="#">Personal Brand</a></h3>
+              </article>
+          </div>
       </div>
-    </div>
   </section>
   <!-- About Us section -->
   <section>
-    <div>
-      <header>
-        <h2>About Us</h2>
-        <p>Everything about us</p>
-      </header>
       <div>
-        <img src="./images/pic-about-us.jpg" alt="" width="460" height="447">
-        <h3>Who are we</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
-        <h3>Our culture</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
-        <h3>How we work</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+          <header>
+              <h2>About Us</h2>
+              <p>Everything about us</p>
+          </header>
+          <div>
+              <img width="460" height="447" src="./images/pic-about-us.jpg" alt="">
+              <h3>Who are we</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+              <h3>Our culture</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+              <h3>How we work</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+          </div>
+          <a href="/about.html">Learn more about us</a>
       </div>
-      <a href="./about.html">Learn more about us</a>
-    </div>
   </section>
   <!-- Latest news section -->
   <section>
-    <div>
-      <header>
-        <h2>Latest news</h2>
-      </header>
       <div>
-        <article>
-          <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
-          <div><img src="./images/pic-blog-01.jpg" alt="" width="305" height="205"></div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
-          <small>By Kelly D.</small>
-        </article>
-        <article>
-          <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
-          <div><img src="./images/pic-blog-02.jpg" alt="" width="305" height="205"></div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
-          <small>By William A.</small>
-        </article>
-        <article>
-          <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
-          <div><img src="./images/pic-blog-02.jpg" alt="" width="305" height="205"></div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
-          <small>By Frances J.</small>
-        </article>
+          <header>
+              <h2>Latest news</h2>
+          </header>
+          <div>
+              <article>
+                  <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
+                  <div><img width="305" height="205" src="./images/pic-blog-01.jpg" alt=""></div>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                  <p><small>By Kelly D.</small></p>
+              </article>
+              <article>
+                  <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
+                  <div><img width="305" height="205" src="./images/pic-blog-02.jpg" alt=""></div>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
+                  <p><small>By William A.</small></p>
+              </article>
+              <article>
+                  <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
+                  <div><img width="305" height="205" src="./images/pic-blog-03.jpg" alt=""></div>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
+                  <p><small>By Frances J.</small></p>
+              </article>
+          </div>
       </div>
-    </div>
   </section>
   <!-- Testimonials section -->
   <section>
-    <div>
-      <header>
-        <h2>Testimonials</h2>
-        <p>We are more than a digital company</p>
-      </header>
       <div>
-        <article>
-          <img src="./images/pic-person-01.jpg" alt="Yuri Y. avatar" height="100" width="100">
-          <blockquote>
-            <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</p><cite>Yuri Y.</cite>
-          </blockquote>
-        </article>
-        <article>
-          <img src="./images/pic-person-02.jpg" alt="Dorrie S. avatar" height="100" width="100">
-          <blockquote>
-            <p>Thank you so much for your help. Techium company is awesome!</p><cite>Dorrie S.</cite>
-          </blockquote>
-        </article>
-        <article>
-          <img src="./images/pic-person-03.jpg" alt="Sven H. avatar" height="100" width="100">
-          <blockquote>
-            <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.</p><cite>Sven H.</cite>
-          </blockquote>
-        </article>
+          <header>
+              <h2>Testimonials</h2>
+              <p>We are more than a digital company</p>
+          </header>
+          <div>
+              <article>
+                  <img height="100" width="100" src="./images/pic-person-01.jpg" alt="Yuri Y. avatar">
+                  <blockquote>
+                      <p>
+                          I am completely blown away. Thanks to Techium, we've just launched our 5th website!
+                      </p>
+                      <cite>
+                          Yuri Y.
+                      </cite>
+                  </blockquote>
+              </article>
+              <article>
+                  <img height="100" width="100" src="./images/pic-person-02.jpg" alt="Dorrie S. avatar">
+                  <blockquote>
+                      <p>
+                          Thank you so much for your help. Techium company is awesome!
+                      </p>
+                      <cite>
+                          Dorrie S.
+                      </cite>
+                  </blockquote>
+              </article>
+              <article>
+                  <img height="100" width="100" src="./images/pic-person-03.jpg" alt="Sven H. avatar">
+                  <blockquote>
+                      <p>
+                          I love your system. Definitely worth the investment. I'd be lost without Techium company.
+                      </p>
+                      <cite>
+                          Sven H.
+                      </cite>
+                  </blockquote>
+              </article>
+          </div>
       </div>
-    </div>
   </section>
   <!-- Contact section -->
   <section>
-    <div>
-      <header>
-        <h2>Contact</h2>
-        <p>We like to know new people</p>
-      </header>
       <div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+          <header>
+              <h2>Contact</h2>
+              <p>We like to know new people</p>
+          </header>
+          <div>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+          </div>
+          <a href="/contact.html">Get in touch</a>
       </div>
-      <a href="contact.html">Get in touch</a>
-    </div>
   </section>
 </main>
 <footer>
