--- a/0x02-CSS_advanced/index.html
+++ b/0x02-CSS_advanced/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Description of the page less than 150 characters">
     <link rel="icon" type="image/png" href="images/favicon.jpg">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet">
-    <link rel='stylesheet' href='styles/5-style.css'>
+    <link rel='stylesheet' href='styles/29-style.css'>
   </head>
   <body>
     <!– Header –>
@@ -225,7 +225,7 @@
           </div>
         </div>
       </section>
-      <!-- Testimonials section -->
+      <!- Testimonials section ->
       <section id="testimonials" class="section">
         <div class="container">
           <header class="section-header">
