Added class to the button that aligns the fields

--- a/0x05-form/04-article.html
+++ b/0x05-form/04-article.html
@@ -193,7 +193,7 @@
                         </span>
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group col-2-3">
                     <button class="button button-primary">Post my comment</button>
                 </div>
               </fieldset>
