--- a/0x07-accessibility/skip-links/01-index.html
+++ b/0x07-accessibility/skip-links/01-index.html
@@ -31,7 +31,7 @@
           <label class="menu-icon" for="menu-btn">
             <span class="navicon"></span>
           </label>
-          <nav class="navbar-menu" id="a11y-primary-nav" tabinddex="-1">
+          <nav class="navbar-menu" id="a11y-primary-nav" tabindex="-1">
             <ul class="nav">
               <li class="nav-item">
                 <a href="/" class="nav-link">Home</a>
@@ -73,7 +73,7 @@
       </div>
     </header>
     <!– Main –>
-    <main id="a11y-main-content" tagindex="-1">
+    <main id="a11y-main-content" tabindex="-1">
       <h1 class="visually-hidden">Homepage</h1>
       <!– Hero section –>
       <section class="section-hero hero-homepage" data-section-theme="dark">
