--- a/0x07-accessibility/fix-a11y/10-index.html
+++ b/0x07-accessibility/fix-a11y/10-index.html
@@ -9,7 +9,7 @@
     <header class="header">
       <div>
         <div>
-          <div><a href="#"><img src="img/logo.png" alt="Name of the Logo"></a></div>
+          <div><a href="#"><img src="img/logo.png" alt="Name of the logo"></a></div>
           <nav class="nav">
             <ul>
               <li><a href="#">Home</a></li>
