attempted to understand why 6 is failing

--- a/0x07-accessibility/fix-a11y/05-index.html
+++ b/0x07-accessibility/fix-a11y/05-index.html
@@ -154,8 +154,10 @@
               <form action="#" method="post">
                 <div class="input-group">
                   <label class="visually-hidden" for="email"></label>
-                  <input class="form-control" type="email" autocomplete="email" id="email" name="email" required aria-requred="true">
-                  <div class="input-group-btn"><button class="btn" type="submit">Validate</button></div>
+                  <input type="email" class="form-control" autocomplete="email" name="email" id="email" aria-required="true" required>
+                  <div class="input-group-btn">
+                    <button class="btn" type="submit">Validate</button>
+                  </div>
                 </div>
               </form>
             </div>
