the check is in this file i know it

--- a/0x07-accessibility/skip-links/01-article.html
+++ b/0x07-accessibility/skip-links/01-article.html
@@ -14,8 +14,8 @@
     <!-- Skip links -->
     <nav aria-label="Skip links">
       <ul class="off-screen">
-        <li><a class="skip-link" href="#a11y-primary-nav">Skip to primary navigation</a></li>
-        <li><a class="skip-link" href="#a11y-main-content">Skip to main content</a></li>
+        <li><a href="#a11y-primary-nav" class="skip-link">Skip to primary navigation</a></li>
+        <li><a href="#a11y-main-content" class="skip-link">Skip to main content</a></li>
       </ul>
     </nav>
     <!-- Header -->
@@ -31,7 +31,7 @@
           <label class="menu-icon" for="menu-btn">
             <span class="navicon"></span>
           </label>
-          <nav class="navbar-menu" id="a11y-primary-nav">
+          <nav class="navbar-menu" id="a11y-primary-nav" tabindex="-1">
             <ul class="nav">
               <li class="nav-item">
                 <a href="/" class="nav-link">Home</a>
