remove use-scalable=no

--- a/0x07-accessibility/fix-a11y/09-index.html
+++ b/0x07-accessibility/fix-a11y/09-index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <meta charset="UTF-8">
-    <title>Homepage - A fake website</title>
-  </head>
-  <body>
-    <header class="header">
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <title>Homepage - A fake website</title>
+</head>
+
+<body>
+  <header class="header">
+    <div>
       <div>
-        <div>
-          <div><a href="#"><img src="img/logo.png" alt="Name of the Logo"></a></div>
-          <nav class="nav">
-            <div>
-              <p><a href="#">Home</a></p>
-              <p><a href="#">About</a></p>
-              <p><a href="#">Services</a></p>
-              <p><a href="#">Portfolio</a></p>
-              <p><a href="#">Pricing</a></p>
-              <p><a href="#">Pages</a></p>
-              <p><a href="#">Contact</a></p>
-            </div>
-          </nav>
-        </div>
+        <div><a href="#"><img src="img/logo.png" alt="Name of the logo"></a></div>
+        <nav class="nav">
+          <div>
+            <p><a href="#">Home</a></p>
+            <p><a href="#">About</a></p>
+            <p><a href="#">Services</a></p>
+            <p><a href="#">Portfolio</a></p>
+            <p><a href="#">Pricing</a></p>
+            <p><a href="#">Pages</a></p>
+            <p><a href="#">Contact</a></p>
+          </div>
+        </nav>
       </div>
-    </header>
-    <main>
+    </div>
+  </header>
+  <main>
     <h1>Homepage</h1>
     <section class="section">
       <div class="container">
@@ -142,36 +144,42 @@
       </div>
     </section>
   </main>
-    <footer class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-5">
-            <div>
-              <span>About Me</span><span>We have tested a number of registry fix and clean utilities and present our top 3 list on our site for your convenience.</span>
-            </div>
+  <footer class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-5">
+          <div>
+            <span>About Me</span><span>We have tested a number of registry fix and clean utilities and present our top 3
+              list on our site for your convenience.</span>
           </div>
-          <div class="col-5">
-            <div class="footer-widget">
-              <span>Newsletter</span>
-              <p>Stay updated with our latest trends</p>
-              <form action="#" method="post">
-                <div class="input-group">
-                  <label class="visually-hidden" for="email"></label>
-                  <input class="form-control" type="email" autocomplete="email" id="email" name="email" required aria-requred="true">
-                  <div class="input-group-btn"><button class="btn" type="submit">Validate</button></div>
+        </div>
+        <div class="col-5">
+          <div class="footer-widget">
+            <span>Newsletter</span>
+            <p>Stay updated with our latest trends</p>
+            <form action="#" method="post">
+              <div class="input-group">
+                <label class="visually-hidden" for="email"></label>
+                <input type="email" class="form-control" autocomplete="email" name="email" id="email"
+                  aria-required="true" required>
+                <div class="input-group-btn">
+                  <button class="btn" type="submit">Validate</button>
                 </div>
-              </form>
-            </div>
+              </div>
+            </form>
           </div>
-          <div class="col-2">
-            <div class="footer-widget">
-              <span>Follow Me</span>
-              <p>Let us be social</p>
-              <div><a href="#" aria-label="Facebook"><i class="facebook-icon"></i></a><a href="#" aria-label="Twitter"><i class="twitter-icon"></i></a></div>
+        </div>
+        <div class="col-2">
+          <div class="footer-widget">
+            <span>Follow Me</span>
+            <p>Let us be social</p>
+            <div><a href="#" aria-label="Facebook"><i class="facebook-icon"></i></a><a href="#" aria-label="Twitter"><i class="twitter-icon"></i></a>
             </div>
           </div>
         </div>
       </div>
-    </footer>
-  </body>
+    </div>
+  </footer>
+</body>
+
 </html>
