Rest of Bootstrap Project :)

--- a/0x0A-Bootstrap/1-index.html
+++ b/0x0A-Bootstrap/1-index.html
@@ -44,17 +44,17 @@
 
         <hr/>
 
-        <div class="row text-white text-center p-0 m-0">
-            <div class="bg-primary p-2">Primary</div>
-            <div class="bg-success p-2">Success</div>
+        <div class="row text-white text-center p-0 m-0 justify-content-between">
+            <div class="bg-primary col-md-2 p-2">Primary</div>
+            <div class="bg-success col-md-2 p-2">Success</div>
         </div>
 
         <hr/>
 
-        <div class="row text-white text-center p-0 m-0">
-            <div class="bg-primary p-2">Primary</div>
-            <div class="bg-success p-2">Success</div>
-            <div class="bg-danger p-2">Danger</div>
+        <div class="row text-white text-center p-0 m-0 justify-content-between">
+            <div class="bg-primary col-md-2 p-2">Primary</div>
+            <div class="bg-success col-md-2 p-2 offset-md-2">Success</div>
+            <div class="bg-danger col-md-2 p-2">Danger</div>
         </div>
     </body>
 </html>
